// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationArea snapshot not changed with project 1`] = `
<div class="navigation-area">
  <div class="navigation-area-top">
    <router-link-stub to="/project-dashboard" tag="a" event="click" class="navigation-area__logo">
      <logoicon-stub class="navigation-area__logo__img"></logoicon-stub>
      <logotexticon-stub class="navigation-area__logo__text"></logotexticon-stub>
    </router-link-stub>
    <p class="navigation-area__project-title">PROJECT</p>
    <projectselection-stub class="project-selection"></projectselection-stub>
    <router-link-stub to="/project-dashboard" tag="a" event="click" aria-label="Dashboard" class="navigation-area__item-container">
      <div class="navigation-area__item-container__link-container">
        <anonymous-stub></anonymous-stub>
        <h1 class="navigation-area__item-container__link-container__title">Dashboard</h1>
      </div>
    </router-link-stub>
    <router-link-stub to="/api-keys" tag="a" event="click" aria-label="API Keys" class="navigation-area__item-container">
      <div class="navigation-area__item-container__link-container">
        <anonymous-stub></anonymous-stub>
        <h1 class="navigation-area__item-container__link-container__title">API Keys</h1>
      </div>
    </router-link-stub>
    <router-link-stub to="/project-members" tag="a" event="click" aria-label="Members" class="navigation-area__item-container">
      <div class="navigation-area__item-container__link-container">
        <anonymous-stub></anonymous-stub>
        <h1 class="navigation-area__item-container__link-container__title">Members</h1>
      </div>
    </router-link-stub>
    <p class="navigation-area__resources-title">RESOURCES</p> <a href="https://documentation.storj.io" target="_blank" class="navigation-area__item-container">
      <div class="navigation-area__item-container__link-container">
        <docsicon-stub class="svg"></docsicon-stub>
        <h1 class="navigation-area__item-container__link-container__title docs-title">Docs</h1>
      </div>
    </a> <a href="mailto:support@storj.io" target="_blank" class="navigation-area__item-container support-item">
      <div class="navigation-area__item-container__link-container">
        <supporticon-stub class="svg"></supporticon-stub>
        <h1 class="navigation-area__item-container__link-container__title">Support</h1>
      </div>
    </a>
  </div>
  <div class="navigation-area__account-area">
    <router-link-stub to="/account/settings" tag="a" event="click" class="navigation-area__item-container account-item">
      <div class="navigation-area__item-container__link-container">
        <h1 class="navigation-area__item-container__link-container__title account-item">Settings</h1>
      </div>
    </router-link-stub>
    <router-link-stub to="/account/billing" tag="a" event="click" class="navigation-area__item-container account-item">
      <div class="navigation-area__item-container__link-container">
        <h1 class="navigation-area__item-container__link-container__title account-item">Billing</h1>
      </div>
    </router-link-stub>
  </div>
</div>
`;

exports[`NavigationArea snapshot not changed without project 1`] = `
<div class="navigation-area">
  <div class="navigation-area-top">
    <router-link-stub to="/onboarding-tour" tag="a" event="click" class="navigation-area__logo">
      <logoicon-stub class="navigation-area__logo__img"></logoicon-stub>
      <logotexticon-stub class="navigation-area__logo__text"></logotexticon-stub>
    </router-link-stub>
    <p class="navigation-area__project-title">PROJECT</p>
    <projectselection-stub class="project-selection"></projectselection-stub>
    <router-link-stub to="/project-dashboard" tag="a" event="click" aria-label="Dashboard" class="navigation-area__item-container disabled">
      <div class="navigation-area__item-container__link-container">
        <anonymous-stub></anonymous-stub>
        <h1 class="navigation-area__item-container__link-container__title">Dashboard</h1>
      </div>
    </router-link-stub>
    <router-link-stub to="/api-keys" tag="a" event="click" aria-label="API Keys" class="navigation-area__item-container disabled">
      <div class="navigation-area__item-container__link-container">
        <anonymous-stub></anonymous-stub>
        <h1 class="navigation-area__item-container__link-container__title">API Keys</h1>
      </div>
    </router-link-stub>
    <router-link-stub to="/project-members" tag="a" event="click" aria-label="Members" class="navigation-area__item-container disabled">
      <div class="navigation-area__item-container__link-container">
        <anonymous-stub></anonymous-stub>
        <h1 class="navigation-area__item-container__link-container__title">Members</h1>
      </div>
    </router-link-stub>
    <p class="navigation-area__resources-title">RESOURCES</p> <a href="https://documentation.storj.io" target="_blank" class="navigation-area__item-container disabled">
      <div class="navigation-area__item-container__link-container">
        <docsicon-stub class="svg"></docsicon-stub>
        <h1 class="navigation-area__item-container__link-container__title docs-title">Docs</h1>
      </div>
    </a> <a href="mailto:support@storj.io" target="_blank" class="navigation-area__item-container support-item disabled">
      <div class="navigation-area__item-container__link-container">
        <supporticon-stub class="svg"></supporticon-stub>
        <h1 class="navigation-area__item-container__link-container__title">Support</h1>
      </div>
    </a>
  </div>
  <div class="navigation-area__account-area">
    <router-link-stub to="/account/settings" tag="a" event="click" class="navigation-area__item-container account-item disabled">
      <div class="navigation-area__item-container__link-container">
        <h1 class="navigation-area__item-container__link-container__title account-item">Settings</h1>
      </div>
    </router-link-stub>
    <router-link-stub to="/account/billing" tag="a" event="click" class="navigation-area__item-container account-item disabled">
      <div class="navigation-area__item-container__link-container">
        <h1 class="navigation-area__item-container__link-container__title account-item">Billing</h1>
      </div>
    </router-link-stub>
  </div>
</div>
`;
